[workspace]

[package]
name = "test"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"
autobenches = false

[dependencies]
async-std = "1.5"
chrono = "0.4"
criterion = "0.3"

[dependencies.libpq]
version = "0.7"
optional = true

[dependencies.pprof]
version = "0.3"
optional = true
features = ["flamegraph"]

[dependencies.postgres]
version = "0.17"
features = ["with-chrono-0_4"]
optional = true

[dependencies.diesel]
#version = "1.4"
path = "/home/weiznich/Dokumente/rust/diesel/diesel"
#git = "https://github.com/diesel-rs/diesel"
features = ["postgres", "chrono"]
optional = true

[dependencies.elephantry]
version = "0.4"
features = ["date"]
optional = true

[dependencies.sqlx]
version = "0.3"
features = ["chrono", "postgres"]
optional = true

[features]
default = ["diesel", "elephantry", "sqlx", "postgres", "libpq"]

[profile.release]
debug = true

[[bench]]
name = "sql_benchs"
harness = false
path = "benches/lib.rs"

[profile.bench]
debug = true
